| Summary: | ASTERISK-25947: Protocol transfers to stasis applications are missing the StasisStart with the replace_channel object. | ||||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||||
| Date Opened: | 2016-04-20 14:50:33 | Date Closed: | 2016-04-22 17:09:18 | ||||
| Priority: | Major | Regression? | |||||
| Status: | Closed/Complete | Components: | Core/Bridging Resources/res_stasis | ||||
| Versions: | 13.8.0 | Frequency of Occurrence | Constant | ||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | Performing an attended transfer to a channel in stasis would result in the StasisStart message not indicating the replace_channel. The stasis application would see a channel leave a bridge and another channel enter the bridge but get no indication that the events were related by one channel replacing the other. | ||||||
| Comments: | |||||||